# aoc24

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: mypy.yml  releaseplease.yml  ruff.yml  unittest.yml
src/aoc24/: __init__.py  __main__.py
src/aoc24/aoc01/: input01.txt.enc  main.py
src/aoc24/aoc02/: input01.txt.enc  main.py
src/aoc24/cli/: main.py
src/aoc24/support/: __init__.py
tests/: test_main.py
