[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = "aoc24"
authors = ["fretboarder <cini01@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
numpy = "^1.26.2"
pandas = "^2.1.3"
cryptography = "^41.0.7"
keyring = "^24.3.0"
shapely = "^2.0.2"
networkx = "^3.2.1"

[tool.poetry.scripts]
aoc = "aoc24.cli.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.5"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
# select = ["E", "F"]
ignore = ["D100", "D101", "D102", "D104", "D105", "D103", "D211", "D213", "ANN101", "INP001", "COM812", "B905", "UP035"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.extend-per-file-ignores]
"**/tests/**/*.py" = ["D", "ANN", "S101"]
"noxfile.py" = ["ALL"]


[tool.pytest.ini_options]
# pythonpath = "aoc24"
addopts = "-rA -q"
testpaths = ["tests"]
